# aifail

./: README.md  pyproject.toml
aifail/: __init__.py  aifail.py
examples/: azure_openai_fallback.py
